<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:text="@string/noras_portfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:paddingTop="20dp"/>
    <TextView android:text="@string/confetti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"/>
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/capstoneButton"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/capstone_by_own_app"
                android:backgroundTint="@color/almostUdacious"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>
            
            <Button
                android:id="@+id/spotifyStreamerButton"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/spotify_streamer"/>

            <Button
                android:id="@+id/scoresButton"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/scores"/>

            <Button
                android:id="@+id/libraryButton"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/library"/>

            <Button
                android:id="@+id/buildItBiggerButton"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/build_it_bigger"/>

            <Button
                android:id="@+id/xyzReaderButton"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/xyz_reader"/>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
